created prefafce section on providers

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -14,6 +14,22 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 
+// Read slides, research and edit this description.
+
+A provider in CloudForms is an external system that can be attached to CloudForms to be managed.
+
+There are several types of providers, which include:
+
+* Infrastructure providers
+* Configuration management providers
+* Automation management providers
+* Cloud providers
+* Networking management providers
+* Middleware management providers
+* Container providers
+* Storage managers
+
+
 :leveloffset: 1
 include::topics/Infrastructure_Providers.adoc[]
 
