--- a/doc-Configuring_High_Availability/topics/Database_Failover.adoc
+++ b/doc-Configuring_High_Availability/topics/Database_Failover.adoc
@@ -57,6 +57,6 @@ Upon database server failover, the standby server becomes the primary. However, 
 
 Manual steps are required to reintroduce the failed primary database node back into the cluster as a standby. This allows for greater control over the configuration, and to diagnose the failure.
 
-To reintroduce the failed node reinitialize the standby database as described in xref:configuring_standby_db[].
+To reintroduce the failed node, reinitialize the standby database as described in xref:configuring_standby_db[].
 
 Your {product-title_short} environment is now re-configured for high availability.
