Updated the procedures related to tenancy under Access Control in the General Configuration guide

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2068,9 +2068,9 @@ To create a tenant:
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. Click on the top-level *Tenant*, click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add child Tenant to this Tenant*) to create a Tenant.
-. Enter a name for the Tenant in the *Name* field.
-. Enter a description for the Tenant in the *Description* field.
+. Click on the top-level *Tenant*, click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add child Tenant to this Tenant*) to create a tenant.
+. Enter a name for the tenant in the *Name* field.
+. Enter a description for the tenant in the *Description* field.
 . Click *Add*.
 
 [[creating-a-project]]
@@ -2080,21 +2080,22 @@ To create a project:
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. Click on the *Tenant* where you want to add a *Project*, click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add Project to this Tenant*) to create a Project.
-. Enter a name for the Project in the *Name* field.
-. Enter a description for the Project in the *Description* field.
+. Click on the *Tenant* where you want to add a *Project*, click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add Project to this Tenant*) to create a project.
+. Enter a name for the project in the *Name* field.
+. Enter a description for the project in the *Description* field.
 . Click *Add*.
 
 [[creating-a-project-quota]]
-==== Creating a Project Quota
+==== Managing Tenant and Project Quotas
 
-To create a project quota:
+Use the following procedure to allocate or edit quotas for tenants and projects.
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. Click on the *Project* where you want to add a Quota, click image:1847.png[] (*Configuration*), and image:1851.png[] (*Manage quotas for the Selected Item*) to create a quota.
-. In the list of pre-built quotas, mark *the _Enforced_ checkbox* next to the quota item you want to enable.
+. Click on the *Tenant* or *Project* where you want to add a quota, click image:1847.png[] (*Configuration*), and image:1851.png[] (*Manage quotas for the Selected Item*) to create a quota.
+. In the list of pre-built quotas, switch *Enforced* next to the quota item you want to enable to `Yes`.
 . In the *Value* field, enter the constraints you want to apply to the quota.
+image:manage-quotas.png[]
 . Click *Save*.
 
 
@@ -2104,8 +2105,8 @@ To tag tenants and projects:
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. In the *Tenant or Project entry*, click the *Policy* drop-down menu, and select *Edit 'My Company' Tags for this Tenant*.
-. In the *Tag Assignment* table, click *Select a customer tag to assign*, and select a tag from the list. In the next column, set a corresponding value.
+. Select the tenant or project, then click *Policy*, and select *Edit My Company Tags for this Tenant*.
+. In *Tag Assignment*, click *Select a customer tag to assign*, and select a tag from the list. In the next column, set a corresponding value.
 . Click *Save*.
 
 
@@ -2117,7 +2118,7 @@ To create a user:
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Users*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new User*) to create a user.
-. Type in a *Full Name*, *Username*, *Password* with confirmation, *Email Address*, and choose a *Group* for the user.
+. Enter a *Full Name*, *Username*, *Password* with confirmation, *Email Address*, and choose a *Group* for the user.
 +
 image:2086.png[]
 +
