--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -105,7 +105,10 @@ The following two approaches exist for tenancy planning:
 
 Tenancy Configuration::
 
-You can create and configure tenancy using the {product-title_short} user interface in the same place you set up users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. ifdef::cfme[] See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users, and groups. endif::cfme[]
+You can create and configure tenancy using the {product-title_short} user interface in the same place you set up users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. 
+ifdef::cfme[] 
+See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users, and groups. 
+endif::cfme[]
 
 Tenancy in Automation::
 
@@ -116,7 +119,10 @@ One of the features of tenancy is that each tenant can have its own automate dom
 • departments that use different end ticketing systems
 • a customer who is a holding company or centralized IT organization for managing different business units
 
-Just like standard domains are nested, you can also add automate domains that are nested at the tenant level. ifdef::cfme[] For the procedure on how to create a new automate domain, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms]. endif::cfme[]
+Just like standard domains are nested, you can also add automate domains that are nested at the tenant level. 
+ifdef::cfme[] 
+For the procedure on how to create a new automate domain, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms]. 
+endif::cfme[]
 
 Tenancy Quota and Reporting::
 
