added general providers definition in the preface

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -16,9 +16,18 @@ include::common/attributes/cfme.adoc[]
 
 // Read slides, research and edit this description.
 
-A provider in CloudForms is an external system that can be attached to CloudForms to be managed.
+{product-title} can manage a variety of external environments, known as providers and managers. A provider or manager is any system that {product-title_short} integrates with for the purpose of collecting data and performing operations.
 
-There are several types of providers, which include:
+// A provider is a server with software to manage multiple virtual machines that reside on multiple hosts.
+// from http://manageiq.org/docs/get-started/concepts - revise
+
+In {product-title_short}, a _provider_ is an external virtualization, cloud, and containers environment that manages multiple virtual machines or instances residing on multiple hosts. One example is Red Hat Virtualization, a platform that manages multiple hosts and virtual machines.
+
+In {product-title_short}, a _manager_ is an external management system that manages more than one type of main resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
+
+This guide covers working with providers, as well as with managers in {product-title_short}.
+
+{product-title_short} supports several types of providers and managers, which include:
 
 * Infrastructure providers
 * Configuration management providers
@@ -28,6 +37,8 @@ There are several types of providers, which include:
 * Middleware management providers
 * Container providers
 * Storage managers
+
+For information on managing the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
 
 
 :leveloffset: 1
