remove info about deleting default zone

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -524,7 +524,7 @@ If Appliance A dispatches a job of analyzing twenty virtual machines, this job c
 
 [NOTE]
 ======
-Only users assigned the super administrator role can create zones. There must always be at least one zone. Default zone is provided. This can be removed only after you have created your own zones.
+Only users assigned the super administrator role can create zones. There must always be at least one zone. The *Default Zone* is provided and cannot be deleted. 
 ======
 
 [[creating-a-zone]]
